--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "authors": [],
     "license": "GPL-2.0-or-later",
     "require": {
-        "typo3/cms-core": "^11.5"
+        "typo3/cms-core": "^11.5",
+      "ext-http": "*"
     },
     "require-dev": {
         "typo3/testing-framework": "^6.9.0"
